--- a/_modules/python2verilog/backend/verilog/codegen.html
+++ b/_modules/python2verilog/backend/verilog/codegen.html
@@ -183,7 +183,7 @@
         <span class="n">body</span><span class="p">:</span> <span class="nb">list</span><span class="p">[</span><span class="n">ver</span><span class="o">.</span><span class="n">Statement</span><span class="p">]</span> <span class="o">=</span> <span class="p">[]</span>
 
         <span class="n">body</span> <span class="o">+=</span> <span class="p">[</span>
-            <span class="n">ver</span><span class="o">.</span><span class="n">Statement</span><span class="p">(</span><span class="n">comment</span><span class="o">=</span><span class="s2">&quot;Global variables&quot;</span><span class="p">),</span>
+            <span class="n">ver</span><span class="o">.</span><span class="n">Statement</span><span class="p">(</span><span class="n">comment</span><span class="o">=</span><span class="s2">&quot;Local variables&quot;</span><span class="p">),</span>
         <span class="p">]</span>
         <span class="n">context</span><span class="o">.</span><span class="n">local_vars</span><span class="o">.</span><span class="n">sort</span><span class="p">(</span><span class="n">key</span><span class="o">=</span><span class="k">lambda</span> <span class="n">x</span><span class="p">:</span> <span class="n">x</span><span class="o">.</span><span class="n">ver_name</span><span class="p">)</span>
         <span class="n">body</span> <span class="o">+=</span> <span class="p">[</span>
