--- a/_modules/python2verilog/optimizer/increase_work.html
+++ b/_modules/python2verilog/optimizer/increase_work.html
@@ -162,7 +162,7 @@
             <span class="bp">self</span><span class="o">.</span><span class="n">apply</span><span class="p">(</span><span class="n">node</span><span class="p">)</span>
             <span class="k">return</span> <span class="n">edge</span>
 
-        <span class="c1"># if &quot;_state3_while&quot; in node.unique_id:</span>
+        <span class="c1"># if &quot;_data = _data__state2_while0_out0&quot; == str(node):</span>
         <span class="c1">#     breakpoint()</span>
 
         <span class="c1"># Exclusive vars can only be visited once</span>
